--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-  <title>Node Verse</title>
+  <title>CourseMentor</title>
 </head>
 
 <body>
